--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 <ng-template #noCustomLayout>
   <mk-layout-wrapper>
     <mk-layout-header logoLink="/">
-      <mk-layout-header-logo><b>Angular </b>AdminLTE</mk-layout-header-logo>
-      <mk-layout-header-logo-mini><b>A</b>LTE</mk-layout-header-logo-mini>
+      <mk-layout-header-logo><b>Help Desk</b></mk-layout-header-logo>
+      <mk-layout-header-logo-mini><b>Help</b></mk-layout-header-logo-mini>
       <app-header-inner></app-header-inner>
     </mk-layout-header>
     <mk-layout-sidebar-left>
