Changed Header and Footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 <ng-template #noCustomLayout>
   <mk-layout-wrapper>
-    <mk-layout-header logoLink="/">
+    <mk-layout-header logoLink="/" [isSidebarRightToggle]="false">
       <mk-layout-header-logo><b>Help Desk</b></mk-layout-header-logo>
       <mk-layout-header-logo-mini><b>Help</b></mk-layout-header-logo-mini>
       <app-header-inner></app-header-inner>
@@ -24,7 +24,7 @@
     </mk-layout-content>
     <mk-layout-footer>
       <mk-layout-footer-left>
-        <strong>Powered by <a href="http://almsaeedstudio.com">AdminLte</a>.</strong>
+        <strong>2020-2020. Template <a href="http://almsaeedstudio.com">AdminLte</a>.</strong>
       </mk-layout-footer-left>
       <mk-layout-footer-right>
         <b>Version</b> 2.4.2
