--- a/src/app/+login/login.component.html
+++ b/src/app/+login/login.component.html
@@ -1,7 +1,7 @@
 <div class="hold-transition login-page">
   <div class="login-box">
     <div class="login-logo">
-      <a routerLink="/"><b>Admin</b>LTE</a>
+      <a routerLink="/"><b>Help</b> Desk</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
