--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -1,1 +1,53 @@
-<p>login works!</p>
+<div class="card card-info" style="width: 50%;">
+    <div class="card-header">
+      <h3 class="card-title">Help Desk | Login</h3>
+    </div>
+    <form class="form-horizontal">
+      <div class="alert alert-error" role="alert" *ngIf="message">
+        <strong>Invalid email or password</strong>
+      </div>
+      <div class="card-body">
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" 
+                 [(ngModel)]="user.email"
+                 name="email"
+                 class="form-control" 
+                 id="inputEmail" 
+                 #email="ngModel"
+                 placeholder="Email"
+                 email>
+          <span class="help-block" *ngIf="email.invalid  && email.dirty">Email is invalid </span>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" 
+                 [(ngModel)]="user.password"
+                 name="password" 
+                 class="form-control" 
+                 id="inputPassword" 
+                 placeholder="Password"
+                 #password="ngModel" 
+                 required>
+            <span class="help-block" *ngIf="password.invalid && password.dirty">Password is required</span>
+          </div>
+        </div>
+        <div class="form-group row">
+          <div class="offset-sm-2 col-sm-10">
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck2">
+              <label class="form-check-label" for="exampleCheck2">Remember me</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.card-body -->
+      <div class="card-footer">
+        <button type="submit" [disabled]="!form.valid" class="btn btn-info">Sign in</button>
+        <button type="submit" (click)="cancelLogin()" class="btn btn-default float-right">Cancel</button>
+      </div>
+    </form>
+  </div>
